--- a/App1/package.json
+++ b/App1/package.json
@@ -21,8 +21,10 @@
     "@babel/preset-react": "^7.13.13",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.7.3",
     "external-remotes-plugin": "^1.0.0",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.38.1",
