--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "@types/node": "^18.11.19",
         "@types/react": "^18.0.27",
         "@types/styled-components": "^5.1.26",
+        "css-loader": "^6.7.3",
         "lerna": "^6.4.1",
+        "style-loader": "^3.3.1",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.5"
     },
