--- a/App1/package.json
+++ b/App1/package.json
@@ -17,13 +17,16 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "react-dom": "^18.2.0",
     "@babel/core": "^7.14.3",
     "@babel/preset-react": "^7.13.13",
+    "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.7.3",
     "external-remotes-plugin": "^1.0.0",
     "html-webpack-plugin": "^5.3.1",
+    "react-router-dom": "^6.8.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
