--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
         "@types/styled-components": "^5.1.26",
         "css-loader": "^6.7.3",
         "lerna": "^6.4.1",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.8.1",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.5"
     },
     "dependencies": {
+        "@react-three/fiber": "^8.11.0",
         "@types/jest": "^29.4.0",
         "@types/react-dom": "^18.0.10",
-        "styled-components": "^5.3.6"
+        "@types/three": "^0.149.0",
+        "styled-components": "^5.3.6",
+        "three": "^0.149.0"
     }
 }
